--- a/project3/project/project/static/css/styles.css
+++ b/project3/project/project/static/css/styles.css
@@ -5,13 +5,25 @@
 .btn:hover { color: #333333; text-decoration: none; background-color: #e6e6e6; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
 .btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: #ffffff; }
 .btn-primary.active { color: rgba(255, 255, 255, 0.75); }
-.btn-primary { background-color: #4a77d4; background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
-.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #4a77d4; }
+.btn-primary { 
+	background-color: #4a77d4; 
+	background-image: -moz-linear-gradient(top, #6eb6de, #6a7494); 
+	background-image: -ms-linear-gradient(top, #c9d0d4, #dddddd); 
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); 
+	background-image: -webkit-linear-gradient(top, #6eb6de, #c928d8); 
+	background-image: -o-linear-gradient(top, #6eb6de, #858ea0); 
+	background-image: linear-gradient(top, #6eb6de, #9322d4); 
+	background-repeat: repeat-x; 
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  
+	border: 1px solid #3762bc; 
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.4); 
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
+.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #dadcdf; }
 .btn-block { width: 100%; display:block; margin-bottom:20px; }
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { width: 100%; height:100%; overflow:hidden; }
+html { width: 100%; height:100%; overflow-y:scroll; }
 
 body { 
 	width: 100%;
@@ -31,8 +43,11 @@ a {
     text-align: center;
 }
 p {
-    color: #ee6f57;
-    text-align: center;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	text-align: center;
+	font-size: 18px;
+	color: rgb(194, 230, 255);;
 }
 
 .box { 
@@ -43,7 +58,22 @@ p {
 	width:300px;
 	height:300px;
 }
-.box h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+
+h1 {
+	position: relative;
+	text-align: center;
+	color: #fff;;
+	font-size: 30px;
+	font-family: 'Lato', sans-serif;
+  }
+
+.box h1 { 
+	color: #fff; 
+	text-shadow: 0 0 12px rgba(0,0,0,0.3); 
+	letter-spacing:1px; 
+	text-align:center; 
+	font-family: "Cormorant Garamond", serif;
+}
 .container {
     margin-top: 10rem;
 	text-align: center;
@@ -104,7 +134,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .box_1 { 
 	position: absolute;
 	top: 35%;
-	left: 50%;
+	left: 40%;
 	margin: -150px 0 0 -150px;
 	width:800px;
 	height:800px;
@@ -117,21 +147,23 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	top: 40%;
 	left: 15%;
 	margin: -150px 0 0 -150px;
-	width:300px;
+	width:400px;
 	height:650px;
     border-radius: 5px;
 }
 .box_2::after{clear:both; content:''; display: block;}
-.box_2 h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+.box_2 h1 { color: #fff; text-shadow: 0 0 8px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 .box_3 {
     position: relative;
     border: 1px solid white;
     padding: 10px; 
 	margin: 0 auto;
-	width:280px;
+	width:380px;
 	height:590px;
     border-radius: 5px;
+	background: rgb(96,9,240);
+	background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
 } 
 
 .box_4 { 
@@ -152,3 +184,298 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	height:300px;
 }
 .box_5 h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+
+
+.box_6 {
+    padding: 10px; 
+	position: absolute;
+	top: 40%;
+	right: 10%;
+	margin: -150px 0 0 -150px;
+	width:400px;
+	height:650px;
+    border-radius: 5px;
+}
+.box_6::after{clear:both; content:''; display: block;}
+
+.pagination {
+	justify-content: center;
+}
+
+
+.custom-btn {
+	width: 130px;
+	height: 40px;
+	color: #fff;
+	border-radius: 5px;
+	padding: 10px 25px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 500;
+	background: transparent;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	position: relative;
+	display: inline-block;
+	 box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+	 7px 7px 20px 0px rgba(0,0,0,.1),
+	 4px 4px 5px 0px rgba(0,0,0,.1);
+	outline: none;
+}
+
+
+
+button {
+	margin: 20px;
+}
+
+
+.btn-3 {
+	background: rgb(0,172,238);
+  	background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+	width: 130px;
+	height: 40px;
+	line-height: 42px;
+	padding: 0;
+	border: none;
+	
+  }
+  .btn-3 span {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+  }
+  .btn-3:before,
+  .btn-3:after {
+	position: absolute;
+	content: "";
+	right: 0;
+	top: 0;
+	 background: rgba(2,126,251,1);
+	transition: all 0.3s ease;
+  }
+  .btn-3:before {
+	height: 0%;
+	width: 2px;
+  }
+  .btn-3:after {
+	width: 0%;
+	height: 2px;
+  }
+  .btn-3:hover{
+	 background: transparent;
+	box-shadow: none;
+  }
+  .btn-3:hover:before {
+	height: 100%;
+  }
+  .btn-3:hover:after {
+	width: 100%;
+  }
+  .btn-3 span:hover{
+	 color: rgba(2,126,251,1);
+  }
+  .btn-3 span:before,
+  .btn-3 span:after {
+	position: absolute;
+	content: "";
+	left: 0;
+	bottom: 0;
+	 background: rgba(2,126,251,1);
+	transition: all 0.3s ease;
+  }
+  .btn-3 span:before {
+	width: 2px;
+	height: 0%;
+  }
+  .btn-3 span:after {
+	width: 0%;
+	height: 2px;
+  }
+  .btn-3 span:hover:before {
+	height: 100%;
+  }
+  .btn-3 span:hover:after {
+	width: 100%;
+  }
+
+  
+.btn-6 {
+	background: rgb(247,150,192);
+    background: radial-gradient(circle, rgba(247,150,192,1) 0%, rgba(118,174,241,1) 100%);
+	line-height: 42px;
+	padding: 0;
+	border: none;
+}
+.btn-6 span {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+.btn-6:before,
+.btn-6:after {
+	position: absolute;
+	content: "";
+	height: 0%;
+	width: 1px;
+   box-shadow:
+	 -1px -1px 20px 0px rgba(255,255,255,1),
+	 -4px -4px 5px 0px rgba(255,255,255,1),
+	 7px 7px 20px 0px rgba(0,0,0,.4),
+	 4px 4px 5px 0px rgba(0,0,0,.3);
+}
+.btn-6:before {
+	right: 0;
+	top: 0;
+	transition: all 500ms ease;
+}
+.btn-6:after {
+	left: 0;
+	bottom: 0;
+	transition: all 500ms ease;
+}
+ .btn-6:hover{
+	background: transparent;
+	color: #76aef1;
+	box-shadow: none;
+}
+.btn-6:hover:before {
+	transition: all 500ms ease;
+	height: 100%;
+}
+.btn-6:hover:after {
+	transition: all 500ms ease;
+	height: 100%;
+}
+.btn-6 span:before,
+.btn-6 span:after {
+	position: absolute;
+	content: "";
+	box-shadow:
+	 -1px -1px 20px 0px rgba(255,255,255,1),
+	 -4px -4px 5px 0px rgba(255,255,255,1),
+	 7px 7px 20px 0px rgba(0,0,0,.4),
+	 4px 4px 5px 0px rgba(0,0,0,.3);
+}
+.btn-6 span:before {
+	left: 0;
+	top: 0;
+	width: 0%;
+	height: .5px;
+	transition: all 500ms ease;
+}
+.btn-6 span:after {
+	right: 0;
+	bottom: 0;
+	width: 0%;
+	height: .5px;
+	transition: all 500ms ease;
+}
+.btn-6 span:hover:before {
+	width: 100%;
+}
+.btn-6 span:hover:after {
+	width: 100%;
+}
+
+.btn-9 {
+	border: none;
+	transition: all 0.3s ease;
+	overflow: hidden;
+}
+.btn-9:after {
+	position: absolute;
+	content: " ";
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #1fd1f9;
+    background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+	transition: all 0.3s ease;
+}
+.btn-9:hover {
+	background: transparent;
+	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+				-4px -4px 6px 0 rgba(116, 125, 136, .2), 
+	  inset -4px -4px 6px 0 rgba(255,255,255,.5),
+	  inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+	color: #fff;
+}
+.btn-9:hover:after {
+	-webkit-transform: scale(2) rotate(180deg);
+	transform: scale(2) rotate(180deg);
+	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+				-4px -4px 6px 0 rgba(116, 125, 136, .2), 
+	  inset -4px -4px 6px 0 rgba(255,255,255,.5),
+	  inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+}
+
+
+.btn-10 {
+	background: rgb(22,9,240);
+  background: linear-gradient(0deg, rgba(22,9,240,1) 0%, rgba(49,110,244,1) 100%);
+	color: #fff;
+	border: none;
+	transition: all 0.3s ease;
+	overflow: hidden;
+  }
+  .btn-10:after {
+	position: absolute;
+	content: " ";
+	top: 0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	transition: all 0.3s ease;
+	-webkit-transform: scale(.1);
+	transform: scale(.1);
+  }
+  .btn-10:hover {
+	color: #fff;
+	border: none;
+	background: transparent;
+  }
+  .btn-10:hover:after {
+	background: rgb(0,3,255);
+    background: linear-gradient(0deg, rgba(2,126,251,1) 0%,  rgba(0,3,255,1)100%);
+	-webkit-transform: scale(1);
+	transform: scale(1);
+  }
+
+  .btn-11 {
+	  border: none;
+	  background: rgb(251,33,117);
+	  background: linear-gradient(0deg, rgba(251,33,117,1) 0%, rgba(234,76,137,1) 100%);
+	  color: #fff;
+	  overflow: hidden;
+  }
+  .btn-11:hover {
+	  text-decoration: none;
+	  color: #fff;
+  }
+  .btn-11:before {
+	  position: absolute;
+	  content: '';
+	  display: inline-block;
+	  top: -180px;
+	  left: 0;
+	  width: 30px;
+	  height: 100%;
+	  background-color: #fff;
+	  animation: shiny-btn1 3s ease-in-out infinite;
+  }
+  .btn-11:hover{
+	opacity: .7;
+  }
+  .btn-11:active{
+	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
+				-4px -4px 6px 0 rgba(116, 125, 136, .2), 
+	  inset -4px -4px 6px 0 rgba(255,255,255,.2),
+	  inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
+  }  
+
+
