--- a/project3/project/project/templates/info.html
+++ b/project3/project/project/templates/info.html
@@ -1,115 +1,111 @@
 {% extends "base.html" %}
 {% block content %}
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <div class="box_5">
     <h1>내정보</h1>
     <form action="/userinfo" method= "post">
         <div class="row">
             <div class="col">
-                <p><strong>이메일</strong></p>
+                <p><strong>
                 {% if session['Email'] %}
-                    <input type="text" name="Email" placeholder="이메일" value='{{session["Email"]}}'required="required" readonly/>
+                    이메일 <input type="text" name="Email" placeholder="이메일" value='{{session["Email"]}}'required="required" readonly/>
                 {% endif %}
-                <p><strong>나이</strong></p>
+                </strong></p>
+                <p><strong>나이
                     <input type="text" name="age" placeholder="나이" required="required"/>
-
-                <p><strong>성별</strong></p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="sex" type="radio" value="man" id="flexradioDefault"/>
-                        <label class="form-check-label" for="flexradioDefault1"></label>
-                        남성
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="sex" type="radio" value="woman" id="flexradioDefault"/>
-                        <label class="form-check-label" for="flexradioDefault2"></label>
-                        여성
-                    </div>
-
-                <p><strong>체중(Kg)</strong></p>
+                </strong></p>
+                <p><strong>성별
+                    <div class ="pagination">
+                        <div class="btn-group" data-toggle="buttons" style="margin-bottom:20px;">
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="sex" id="sex1" value="M" autocomplete="off" > 남성
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="sex" id="sex2" value="F" autocomplete="off"> 여성
+                            </label>
+                        </div> 
+                    </div>   
+                </strong></p>
+                <p><strong>체중(Kg)
                     <input type="text" name="weight" placeholder="체중" required="required" style="margin-bottom:20px;"/>
-
-                <p><strong>신장(cm)</strong></p>
+                </strong></p>
+                <p><strong>신장(cm)
                     <input type="text" name="height" placeholder="신장(키)" required="required" style="margin-bottom:20px;"/>
-
-                <p><strong>운동횟수(주)</strong></p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="exercise" type="radio" value="1" id="flexradioDefault"/>
-                        <label class="form-check-label" for="exer1"></label>
-                        주 2회 이하
+                </strong></p>
+                <p><strong>운동횟수(주)
+                    <div class ="pagination">
+                        <div class="btn-group" data-toggle="buttons" style="margin-bottom:20px;">
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="exercise" id="exercise1" value="1" autocomplete="off"> 주2회이하
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="exercise" id="exercise2" value="2" autocomplete="off"> 주3회
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="exercise" id="exercise3" value="3" autocomplete="off"> 주4회
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="exercise" id="exercise4" value="4" autocomplete="off"> 주5회이상
+                            </label>
+                        </div>
+                    </div>   
+                </strong></p>
+                <p><strong>음주(1회)
+                    <div class ="pagination">
+                        <div class="btn-group" data-toggle="buttons" style="margin-bottom:20px;">
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="drink" id="drink1" value="1" autocomplete="off"> 소주반병이하
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="drink" id="drink2" value="2" autocomplete="off"> 1병이하
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="drink" id="drink3" value="3" autocomplete="off"> 1.5병정도
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="drink" id="drink4" value="4" autocomplete="off"> 2병정도
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="drink" id="drink5" value="5" autocomplete="off"> 2.5병이상
+                            </label>
+                        </div>
                     </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;">
-                        <input class="form-check-input" name="exercise" type="radio" value="2" id="flexradioDefault"/>
-                        <label class="form-check-label" for="exer2"></label>
-                        주 3회
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="exercise" type="radio" value="3" id="flexradioDefault"/>
-                        <label class="form-check-label" for="exer3"></label>
-                        주 4회
-                    </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;" >
-                        <input class="form-check-input" name="exercise" type="radio" value="4" id="flexradioDefault"/>
-                        <label class="form-check-label" for="exer4"></label>
-                        주 5회 이상
-                    </div>
-
-                <p><strong>음주(한번 마실때)</strong></p>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;">
-                        <input class="form-check-input" name="drink" type="radio" value="1" id="flexradioDefault"/>
-                        <label class="form-check-label" for="drink1"></label>
-                        소주 반병 이하
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="drink" type="radio" value="2" id="flexradioDefault"/>
-                        <label class="form-check-label" for="drink2"></label>
-                        1병 이하
-                    </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;" >
-                        <input class="form-check-input" name="drink" type="radio" value="3" id="flexradioDefault"/>
-                        <label class="form-check-label" for="drink3"></label>
-                        1.5병 정도
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="drink" type="radio" value="4" id="flexradioDefault"/>
-                        <label class="form-check-label" for="drink4"></label>
-                        2병 정도
-                    </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;">
-                        <input class="form-check-input" name="drink" type="radio" value="5" id="flexradioDefault"/>
-                        <label class="form-check-label" for="drink5"></label>
-                        2.5병 이상
-                    </div>
-
-                <p><strong>기저질환</strong></p> 
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="disease" type="radio" value="Y" id="flexradioDefault"/>
-                        <label class="form-check-label" for="disease1"></label>
-                        O
-                    </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;">
-                        <input class="form-check-input" name="disease" type="radio" value="N" id="flexradioDefault"/>
-                        <label class="form-check-label" for="disease2"></label>
-                        X
-                    </div>                      
-
+                </strong></p>    
+                <p><strong>기저질환
+                    <div class ="pagination">
+                        <div class="btn-group" data-toggle="buttons" style="margin-bottom:20px;">
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="disease" id="disease1" value="Y" autocomplete="off"> Y(예)
+                            </label>
+                            <label class="btn btn-primary">
+                                <input type="radio" name="disease" id="disease2" value="N" autocomplete="off"> N(아니오)
+                            </label>
+                        </div> 
+                    </div>                           
+                </strong></p> 
                 <p><strong>흡연여부</strong></p>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="smoke" type="radio" value="Y" id="flexradioDefault"/>
-                        <label class="form-check-label" for="smoke1"></label>
-                        O
-                    </div>
-                    <div class="form-check form-check-inline" style="margin-bottom:20px;">
-                        <input class="form-check-input" name="smoke" type="radio" value="N" id="flexradioDefault"/>
-                        <label class="form-check-label" for="smoke2"></label>
-                        X
-                    </div>
-
-            <button type="submit" class="btn btn-primary btn-block btn-large">저장하기</button>
-            <a href="{{ url_for('mainpage') }}" class="btn btn-secondary btn-block btn-large">메인화면</a>
-
+                    <div class ="pagination">
+                        <div class="btn-group" data-toggle="buttons" style="margin-bottom:20px; ">
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="smoke" id="smoke1" value="Y" autocomplete="off" checked> Y(예)
+                            </label>
+                            <label class="btn btn-primary active">
+                                <input type="radio" name="smoke" id="smoke2" value="N" autocomplete="off"> N(아니오)
+                            </label>
+                        </div>
+                    </div>       
+                 </strong></p> 
+                 <div class ="pagination">
+                     <button type="submit" class="custom-btn btn-10 btn-large" onclick="return confirm('저장 완료');">저장하기</button>
+                     <button type="button" class="custom-btn btn-10 btn-large" onclick="location.href='{{ url_for('mainpage') }}'">메인으로</button>
+                </div>
           </div> 
         </div>
     </form>
 </div>
+
+<script src="http://madalla.kr/js/jquery-1.8.3.min.js"></script>
 
 {% endblock %}
