--- a/project3/project/project/templates/mainpage.html
+++ b/project3/project/project/templates/mainpage.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <div class="container">   
 
   <form> 
     <div class="box_1">
-         <h1> 당신이 먹은 음식은? </h1>
+         <h1> 오늘의 식단은? </h1>
          <ul class="navbar-nav ml-auto">
            <li class="nav-item">
                 {% for x in value%}
@@ -17,22 +17,28 @@
                 {% endfor %}
                 <p>
                   <div class="image-container">
-                    <img style="width: 700px; height:auto;" id="preview-image" src="https://dummyimage.com/500x500/ffffff/000000.png&text=preview+image">
+                    <img style="width: 700px; height:auto;" id="preview-image" src="http://placeimg.com/480/480/nature">
                     <input style="display: block;" type="file" id="input-image">
-                    <button class="button_1" onclick="location.href='/' " >뒤로가기</button>
-                    <button class="button_1" onclick="return confirm('제출 성공! \n업로드한 이미지를 확인합니다.');">제출하기</button>
+                    <button class="custom-btn btn-9" style="float:right" onclick="location.href='/' " >취소</button>
+                    <button class="custom-btn btn-9" style="float:right" onclick="return confirm('제출 성공! \n업로드한 이미지를 확인합니다.');">제출</button>
                   </div>
                 </p>
            </li>
          </ul>
     </div>
     <div class="box_2">
-        <div class="box_3 box2">
-           <!-- <h1> 그래프 삽입 </h1> -->
-           <img src="{{ url_for('fig') }}" alt="Image Placeholder" width='280', height='590'>
-        </div>   
-        <button class="button_2" onclick="window.location.reload()">새로고침</button>
-    </div>   
+        <h1> Graph of the week </h1>
+          <img src="{{ url_for('fig') }}" alt="Image Placeholder" width='380', height='580'>
+        <!-- <div class="box_3 box2">
+        </div>    -->
+        <button class="custom-btn btn-9" onclick="window.location.reload()">업데이트</button>
+    </div>  
+    <div class="box_6">
+      <h1> Today Calories </h1>
+      <div class="box_3 box6">
+      </div>   
+      <button class="custom-btn btn-9" onclick="window.location.reload()">업데이트</button>
+    </div>  
   </form>
 </div>  
 
